--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -25,9 +25,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/SuperResolution.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jfreechart-1.0.3.jar=C:\\Users\\Rishab\\Downloads\\jfreechart-1.0.3.jar\\jfreechart-1.0.3.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.jfreechart-1.0.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
